# blazing-fan

./: .gitignore  Cargo.toml  laze-project.yml  rustc-ice-2026-06-20T20_08_55-123042.txt  rustc-ice-2026-06-20T20_08_55-123043.txt  rustc-ice-2026-06-20T20_12_06-125594.txt  rustc-ice-2026-06-20T20_12_06-125595.txt  shell.nix
.helix/: languages.toml
.nu/: config.nu
blazing-fan-daemon/: Cargo.toml
blazing-fan-daemon/src/: config.rs  main.rs
blazing-fan-daemon/src/adapter/inbound/: dbus_adapter.rs  mod.rs
blazing-fan-daemon/src/adapter/outbound/: mod.rs  otel_adapter.rs  uart_adapter.rs
blazing-fan-daemon/src/core/: config.rs  mod.rs  sysinfo.rs
blazing-fan-daemon/src/core/port/inbound/: dbus_port.rs  mod.rs
blazing-fan-daemon/src/core/port/outbound/: mod.rs  otel_port.rs  uart_port.rs
blazing-fan-firmware/: Cargo.toml  laze-project.yml
blazing-fan-firmware/.cargo/: config.toml
blazing-fan-firmware/.helix/: languages.toml
blazing-fan-firmware/src/: main.rs  pins.rs
blazing-fan-firmware/src/adapter/inbound/: button_adapter.rs  gpio_button.rs  mod.rs  uart.rs  uart_adapter.rs
blazing-fan-firmware/src/adapter/outbound/: emc2101.rs  emc2101_adapter.rs  fan_power_adapter.rs  gpio_fan_supply.rs  mod.rs  rp2040.rs  rp2040_adapter.rs  ws2812.rs  ws2812_adapter.rs
blazing-fan-firmware/src/adapters/: button_adapter.rs  emc2101_adapter.rs  fan_power_adapter.rs  mod.rs  rp2040_adapter.rs  uart_adapter.rs  ws2812_adapter.rs
blazing-fan-firmware/src/core/: fan.rs  mod.rs
blazing-fan-firmware/src/core/port/inbound/: mod.rs  uart_port.rs  user_button.rs
blazing-fan-firmware/src/core/port/outbound/: emc2101_port.rs  fan_controller.rs  fan_supply.rs  mcu.rs  mod.rs  rp2040_port.rs  status_indicator.rs
blazing-fan-firmware/src/ports/: button_port.rs  emc2101_port.rs  fan_power_port.rs  mod.rs  rp2040_port.rs  ws2812_port.rs
blazing-fan-proto/: Cargo.toml
blazing-fan-proto/src/: lib.rs
blazing-fan-tui/: Cargo.toml
blazing-fan-tui/src/: main.rs
docs/: README.md
src/: main.rs  pins.rs
