[package]
name = "blazing-fan"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [
  "external-interrupts",
  "time",
  "uart",
  "defmt",
] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
ariel-os-log = { path = "build/imports/ariel-os/src/ariel-os-log", features = [
  "defmt",
] }

embedded-io-async = { version = "0.6.1", default-features = false }
embassy-sync = { version = "0.7.2", default-features = false }

heapless = { version = "0.7.0", features = ["defmt"] }
postcard = { version = "1.1.3", features = [
  "heapless",
  "use-crc",
  "experimental-derive",
] }
serde = { version = "1.0", default-features = false }

defmt = { version = "1.0.0" }
defmt-rtt = { version = "1.1.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
