[package]
name = "blazing-fan-daemon"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blazing-fan-proto = { path = "../blazing-fan-proto" }

color-eyre = "0.6.3"

tokio = { version = "1.52.3", features = ["full"] }
zbus = "5.16.0"
sysinfo = "0.39.3"
sd-notify = "0.5.0"
serial2-tokio = "0.1.24"

postcard = { version = "1.1.3", features = [
  "heapless",
  "use-crc",
  "experimental-derive",
] }

serde = { version = "1.0.228", features = ["derive"] }

config = "0.15.23"
directories = "6.0.0"

opentelemetry = { version = "0.32.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.32.1", features = [
  "metrics",
  "logs",
  "rt-tokio",
  "experimental_metrics_periodicreader_with_async_runtime",
  "experimental_logs_batch_log_processor_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.32.0", features = [
  "metrics",
  "logs",
  "reqwest-client",
  "reqwest-rustls",
  "zstd-http",
] }
opentelemetry-stdout = { version = "0.32.0", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.32.0"
tonic = "0.14.6"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "registry",
  "env-filter",
] }

thiserror = "2.0.18"
