[package]
name = "blazing-fan-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [
  "external-interrupts",
  "time",
  "uart",
  "defmt",
  "i2c",
] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
ariel-os-hal = { path = "build/imports/ariel-os/src/ariel-os-hal" }

embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.6.1", default-features = false }
embassy-sync = { version = "0.7.2", default-features = false }
embassy-rp = { version = "0.8", default-features = false }

static_cell = "2.1.1"

blazing-fan-proto = { path = "../blazing-fan-proto" }

emc2101 = { version = "2.0.1", features = ["async"] }
fugit = "0.3.7"
bounded-integer = "0.6.0"

thiserror = { version = "2.0.18", default-features = false }
heapless = { version = "0.7.0", features = ["defmt"] }
postcard = { version = "1.1.3", features = [
  "heapless",
  "use-crc",
  "experimental-derive",
] }
serde = { version = "1.0", default-features = false }

defmt = { version = "1.1.0" }
defmt-rtt = { version = "1.2.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
