[package]
name = "blazing-fan-proto"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
postcard = { version = "1.1.3", features = [
  "heapless",
  "use-crc",
  "experimental-derive",
] }
serde = { version = "1.0", default-features = false }
