[package]
name = "blazing-fan-proto"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
no-std = ["dep:heapless"]
defmt = ["dep:defmt"]

[dependencies]
crc = "3.4.0"
postcard = { version = "1.1.3", features = [
  "heapless",
  "use-crc",
  "experimental-derive",
] }
serde = { version = "1.0", default-features = false }
defmt = { version = "1.1.0", optional = true }

heapless = { version = "0.9.3", features = ["defmt"], optional = true }

thiserror = { version = "2.0.18", default-features = false }
