[package]
name = "blazing-fan-tui"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
color-eyre = "0.6.5"

tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
futures = "0.3.32"

ratatui = "0.30.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }

zbus = "5.16.0"
